--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "html-react-parser": "^5.1.10",
     "immer": "^10.0.4",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.4",
+    "multer": "^1.4.5-lts.1",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "prettier-plugin-tailwindcss": "^0.5.13",
@@ -33,6 +35,8 @@
     "react-hook-form": "^7.51.2",
     "react-kakao-maps-sdk": "^1.1.26",
     "react-router-dom": "^6.22.3",
+    "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
     "uploadthing": "^6.9.0"
   },
   "devDependencies": {
