--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query-devtools": "^5.28.14",
     "@uploadthing/react": "^6.4.4",
     "@vercel/blob": "^0.22.3",
+    "antd": "^5.16.4",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -28,11 +29,15 @@
     "multer": "^1.4.5-lts.1",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
+    "next-themes": "^0.3.0",
     "prettier-plugin-tailwindcss": "^0.5.13",
     "react": "^18",
+    "react-csspin": "^0.0.1",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
     "react-google-button": "^0.7.2",
     "react-hook-form": "^7.51.2",
+    "react-icons": "^5.1.0",
     "react-kakao-maps-sdk": "^1.1.26",
     "react-router-dom": "^6.22.3",
     "recoil": "^0.7.7",
